<resources>
    <string name="app_name">Mole XTRL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image_desc">Imagen del producto</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_description">Descripción del producto</string>
    <string name="product_price">Precio: $0.00</string>
    <string name="product_available">Disponible: 0</string>
    <string name="add_to_cart">Añadir al Carrito</string>
    <string name="dd">Tienda Virtual</string>
    <string name="inicio">Inicio</string>
    <string name="productos">Productos</string>
    <string name="categorias">Categorías</string>
    <string name="perfil">Mi Perfil</string>
    <string name="carrito">Carrito</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="nombreAPP">OktShop</string>
    <string name="titulo_perfil">Mi Perfil</string>
    <string name="titulo_editar_perfil">Editar Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="numero_telefono">Número de teléfono</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="ingrese_su_correo_electr_nico">Ingrese su correo electrónico</string>
    <string name="correo_electr_nico">Correo electrónico:</string>
    <string name="ingrese_su_nombre_completo">Ingrese su nombre completo</string>
    <string name="editar_informaci_n">Editar Información</string>
    <string name="ingrese_su_n_mero_de_tel_fono">Ingrese su número de teléfono</string>
    <string name="informaci_n_personal">Información Personal</string>
    <string name="logo_tienda">Logo de OktShop</string>
    <string name="descripcion_tienda">Mole Extrl es tu tienda que te ofrece variedad de tallas grandes y a la moda; Calidad garantizada y envíos rápidos a todo el país.</string>
    <string name="categorias_titulo">Nuestras Categorías</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="opciones">Opciones</string>
    <string name="categor_a">Categoría</string>
    <string name="_5_productos">5 productos</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="pagar">Pagar</string>
    <string name="productos_en_el_carrito_0">Productos en el carrito: 0</string>
    <string name="todo">TODO</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="cantidad_1">Cantidad: 1</string>
    <string name="precio_0_0">Precio: $0.0</string>
    <string name="subtotal_0_0">Subtotal: $0.0</string>
    <string name="ir_al_carrito">Ir al carrito</string>
    <string name="mas">+</string>
    <string name="_1">1</string>
    <string name="menos">-</string>
    <string name="x">x</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="registrar">Registrar</string>
    <string name="ya_tienes_cuenta_inicia_sesi_n">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="bienvenido_a_mole_extrl">Bienvenido a Mole Extrl</string>
    <string name="recupera_tu_contrase_a">Recupera tu contraseña</string>
    <string name="notienes_cuenta">No tienes Cuenta</string>
    <string name="ingresa_con_google">ingresa con google</string>
    <string name="recupera_la_contrase_a">Recupera La Contraseña</string>
    <string name="enviar_cambio_correo">Enviar</string>
    <string name="Cuerpo">Bienvenido a nuestra tienda para tallas grandes</string>
    <string name="cancelar">Cancelar</string>
    <string name="que_bueno_verte_de_nuevo">QUE BUENO VERTE DE NUEVO</string>
    <string name="google">Google</string>
    <string name="tiendas_cercanas">Tiendas cercanas</string>
    <string name="tienda_Ubicación">Tiendas en Bogotá</string>
    <string name="ubicate_en_el_mapa">Ubicate en el mapa</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="Admin">Administrador</string>
    <string name="Eliminarproductos">Eliminar productos</string>
    <string name="Agregarproductos">Agregar productos\n</string>
    <string name="Editarproductos">Editar productos</string>
    <string name="Cuenta">Administrar cuentas</string>
    <string name="Stockentienda">Stock de productos</string>
    <string name="administrar_cuenta">Administrar cuentas</string>
    <string name="agregar_cuenta">Agregar cuenta</string>
    <string name="agregar">Agregar\n</string>
    <string name="precio">Precio\n</string>
    <string name="cantidad">Cantidad</string>
    <string name="Agregarproducto">Agregar producto</string>
    <string name="editar_producto">Editar producto</string>
    <string name="eliminar_productos">Eliminar productos</string>
    <string name="stock_en_tienda">Stock en tienda</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="CantidadDisponible">Cantidad disponible</string>
    <string name="Refrescar">Refrescar</string>
    <string name="eresadministrador">¿Eres administrador?</string>
    <string name="Suba">Suba-Bogotá</string>
    <string name="chapinero_bogota">Chapinero-Bogota</string>
    <string name="cedula">cedula</string>
    <string name="Administrar">Administrar</string>
    <string name="guardar_producto">Guardar Producto</string>
</resources>