<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@android:color/white"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/imgCarritoProducto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher_foreground"
        android:scaleType="centerCrop"
        android:layout_marginEnd="12dp"
        android:background="@android:color/darker_gray"
        android:padding="4dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNombreCarrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_producto"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/txtCantidadCarrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_1" />

        <TextView
            android:id="@+id/txtPrecioCarrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_0_0" />

        <TextView
            android:id="@+id/txtSubtotalCarrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal_0_0" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/x"
        android:backgroundTint="@android:color/holo_red_light"/>
</LinearLayout>
