<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtCantidadProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productos_en_el_carrito_0"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCarrito"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_0_00"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"/>

    <Button
        android:id="@+id/btnPagar"
        android:backgroundTint="@color/azul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagar"/>
</LinearLayout>
