<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imgCategoria"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:paddingStart="12dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/txtNombreCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categor_a"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtCantidadProductos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_productos"/>
    </LinearLayout>
</LinearLayout>
