<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/layoutAgregarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/logoAgregarProducto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/logo"
            android:contentDescription="logo" />


        <TextView
            android:id="@+id/tvTituloAgregarProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Agregarproductos"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="24dp" />


        <EditText
            android:id="@+id/etNombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_producto"
            android:layout_marginBottom="16dp" />


        <EditText
            android:id="@+id/etPrecioProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:inputType="numberDecimal"
            android:layout_marginBottom="24dp" />


        <Button
            android:id="@+id/btnGuardarProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_cambios"
            android:backgroundTint="@color/azul"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
